# nrzrepo

./: .eslintignore  .gitattributes  .gitignore  .prettierignore  CONTRIBUTING.md  Cargo.toml  README.md  clippy.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release.md  socket.yaml  version.txt
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS  nrz-orchestrator.yml  nrzrepo-release.yml
cli/: .gitignore  (+5 more)
crates/nrzrepo/: Cargo.toml  README.md
crates/nrzrepo-analytics/: Cargo.toml
crates/nrzrepo-analytics/src/: lib.rs
crates/nrzrepo-auth/: Cargo.toml
crates/nrzrepo-auth/src/: error.rs  lib.rs  login_server.rs
crates/nrzrepo-auth/src/auth/: login.rs  logout.rs  mod.rs  sso.rs
crates/nrzrepo-auth/src/ui/: messages.rs
crates/nrzrepo-lib/: Cargo.toml  README.md  build.rs
crates/nrzrepo-lib/fixtures/local_config/: nrzv2.package-lock.json
crates/nrzrepo-lib/src/: boundaries.rs  diagnostics.rs  framework.rs  gitignore.rs  lib.rs  microfrontends.rs  opts.rs  package_changes_watcher.rs  panic_handler.rs  task_hash.rs  tracing.rs
crates/nrzrepo-lib/src/cli/: error.rs  mod.rs
crates/nrzrepo-lib/src/cli/snapshots/: nrzrepo_lib__cli__test__nrz---filter=web-watch-build.snap  nrzrepo_lib__cli__test__nrz---no-daemon-boundaries.snap  nrzrepo_lib__cli__test__nrz---no-daemon-run-build.snap  nrzrepo_lib__cli__test__nrz---no-daemon-watch-build.snap  nrzrepo_lib__cli__test__nrz-watch-build---no-daemon.snap
crates/nrzrepo-lib/src/commands/: bin.rs  boundaries.rs  config.rs  daemon.rs  generate.rs  info.rs  link.rs  login.rs  logout.rs  ls.rs  mod.rs  prune.rs  query.rs  run.rs  scan.rs  telemetry.rs  unlink.rs
crates/nrzrepo-lib/src/config/: env.rs  file.rs  mod.rs  nrz_json.rs  override_env.rs
crates/nrzrepo-lib/src/daemon/: client.rs  connector.rs  default_timeout_layer.rs  endpoint.rs  mod.rs  server.rs
crates/nrzrepo-lib/src/daemon/proto/: nrzd.proto
crates/nrzrepo-lib/src/engine/: builder.rs  execute.rs  mod.rs
crates/nrzrepo-lib/src/engine/snapshots/: nrzrepo_lib__engine__builder__test__run_package_task_exact_error-2.snap  nrzrepo_lib__engine__builder__test__run_package_task_exact_error.snap  nrzrepo_lib__engine__builder__test__run_package_task_invalid_package.snap
crates/nrzrepo-lib/src/globwatcher/: mod.rs
crates/nrzrepo-lib/src/hash/: mod.rs  traits.rs
crates/nrzrepo-lib/src/nrz_json/: loader.rs  mod.rs  parser.rs
crates/nrzrepo-lib/src/process/: child.rs  command.rs
crates/nrzrepo-lib/src/query/: external_package.rs  file.rs  mod.rs  package.rs  server.rs  task.rs
crates/nrzrepo-lib/src/run/: builder.rs  cache.rs  error.rs  global_hash.rs  graph_visualizer.rs  mod.rs  task_access.rs  task_id.rs  ui.rs  watch.rs
crates/nrzrepo-lib/src/run/package_discovery/: mod.rs
crates/nrzrepo-lib/src/run/scope/: change_detector.rs  filter.rs  mod.rs  simple_glob.rs  target_selector.rs
crates/nrzrepo-lib/src/run/summary/: duration.rs  execution.rs  global_hash.rs  mod.rs  scm.rs  spaces.rs  task.rs  task_factory.rs
crates/nrzrepo-lib/src/shim/: local_nrz_config.rs  local_nrz_state.rs  mod.rs  nrz_state.rs  parser.rs
crates/nrzrepo-lib/src/snapshots/: nrzrepo_lib__opts__test__force.snap  nrzrepo_lib__opts__test__force_remote_r,local_r.snap  nrzrepo_lib__opts__test__no-cache.snap  nrzrepo_lib__opts__test__no-cache_remote_w,local_rw.snap  nrzrepo_lib__opts__test__nrz_boundaries_--filter_foo.snap  nrzrepo_lib__opts__test__nrz_watch_build.snap  nrzrepo_lib__opts__test__remote-cache-read-only.snap  nrzrepo_lib__opts__test__remote-only.snap
crates/nrzrepo-lib/src/task_graph/: mod.rs
crates/nrzrepo-lib/src/task_graph/visitor/: command.rs  error.rs  exec.rs  mod.rs  output.rs
crates/nrzrepo-telemetry/: Cargo.toml  README.md
crates/nrzrepo-telemetry/src/: config.rs  errors.rs  lib.rs
crates/nrzrepo-telemetry/src/events/: command.rs  generic.rs  mod.rs  repo.rs  task.rs
crates/nrzrepo/src/: main.rs
crates/nrzrepo/tests/: query.rs
crates/nrzrepo/tests/common/: mod.rs
crates/nrzrepo/tests/snapshots/: boundaries__boundaries_get_boundaries_lints_(npm@10.5.0).snap  query__basic_monorepo_get_package_that_doesn't_exist_(npm@10.5.0).snap  query__basic_monorepo_get_packages_with_less_than_1_dependents_(npm@10.5.0).snap  query__basic_monorepo_get_packages_with_less_than_2_dependents_(npm@10.5.0).snap  query__basic_monorepo_get_packages_with_more_than_0_dependents_(npm@10.5.0).snap  query__nrz_trace_get_`button.tsx`_with_dependencies_(npm@10.5.0).snap  query__nrz_trace_get_`button.tsx`_with_dependents_(npm@10.5.0).snap  query__nrz_trace_get_`circular.ts`_with_dependencies_(npm@10.5.0).snap  query__nrz_trace_get_`export_all.js`_with_dependencies_(npm@10.5.0).snap  query__nrz_trace_get_`export_named.js`_with_dependencies_(npm@10.5.0).snap  query__nrz_trace_get_`import_value_and_type.ts`_with_all_dependencies_(npm@10.5.0).snap  query__nrz_trace_get_`import_value_and_type.ts`_with_type_dependencies_(npm@10.5.0).snap  query__nrz_trace_get_`import_value_and_type.ts`_with_value_dependencies_(npm@10.5.0).snap  query__nrz_trace_get_`incorrect_extension.mjs`_with_dependencies_(npm@10.5.0).snap  query__nrz_trace_get_`invalid.ts`_with_dependencies_(npm@10.5.0).snap  query__nrz_trace_get_`link.tsx`_with_all_dependents_(npm@10.5.0).snap  query__nrz_trace_get_`link.tsx`_with_type_dependents_(npm@10.5.0).snap  query__nrz_trace_get_`link.tsx`_with_value_dependents_(npm@10.5.0).snap  query__nrz_trace_get_`main.ts`_(npm@10.5.0).snap  query__nrz_trace_get_`main.ts`_with_ast_(npm@10.5.0).snap  query__nrz_trace_get_`main.ts`_with_dependencies_(npm@10.5.0).snap  query__nrz_trace_get_`main.ts`_with_depth_=_0_(npm@10.5.0).snap  query__nrz_trace_get_`with_prefix.ts`_with_dependencies_(npm@10.5.0).snap  query__nrz_trace_monorepo_get_`apps__my-app__index.ts`_with_dependencies_(npm@10.5.0).snap  query__nrz_trace_monorepo_get_`packages__another__index.js`_with_dependents_(npm@10.5.0).snap  query__nrz_trace_monorepo_get_`packages__utils__index.ts`_with_dependents_(npm@10.5.0).snap  query__oxc_repro_get_dependencies_(npm@10.5.0).snap
(+654 files in other folders)
