[package]
name = "nrzrepo-telemetry"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dev-dependencies]
nrzrepo-vercel-api-mock = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
test-case = { workspace = true }

[dependencies]
chrono = { workspace = true, features = ["serde"] }
config = { version = "0.13.4", default-features = false, features = ["json"] }
futures = { workspace = true }
hex = "0.4.3"
nrzpath = { workspace = true }
nrzrepo-api-client = { workspace = true }
nrzrepo-ci = { workspace = true }
nrzrepo-dirs = { path = "../nrzrepo-dirs" }
nrzrepo-ui = { workspace = true }
nrzrepo-vercel-api = { workspace = true }
once_cell = "1.18.0"
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = "0.10.8"
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full", "time"] }
tracing = { workspace = true }
url = { workspace = true }
uuid = { version = "1.5.0", features = ["v4"] }
