[package]
name = "nrz"
version = "0.1.0"
edition = "2021"
license = "MIT"

[features]
# By default, we enable rustls-tls for reqwest via downstream transitive features.
# This is for the convenience of running daily dev workflows, i.e running
# `cargo xxx` without explicitly specifying features, not that we want to
# promote this as default backend.
default = ["rustls-tls", "nrzrepo-lib/daemon-package-discovery"]
native-tls = ["nrzrepo-lib/native-tls"]
rustls-tls = ["nrzrepo-lib/rustls-tls"]
pprof = ["nrzrepo-lib/pprof"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
build-target = "0.4.0"

[dev-dependencies]
assert_cmd = { workspace = true }
camino = { workspace = true }
insta = { version = "1.40.0", features = ["json", "filters"] }
itertools = { workspace = true }
pretty_assertions = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
nrzpath = { workspace = true }
which = { workspace = true }


[lints]
workspace = true

[dependencies]
anyhow = { workspace = true, features = ["backtrace"] }
miette.workspace = true
nrzrepo-lib = { workspace = true, default-features = false }
